--- a/.github/workflows/deployV4.yml
+++ b/.github/workflows/deployV4.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - test
+      - main_v4
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
@@ -31,5 +31,5 @@ jobs:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
           publish_dir: ./docs/.vuepress/dist
-          publish_branch: gh-pages
+          publish_branch: dist_v4
 
